# server/api/controllers/images.js
@@ -3,12 +3,29 @@
 var Promise = require('bluebird');
 var helpers = require('../helpers');
 var lxdClient = helpers.getLXDClient();
-var ImageModel = require('../models').ImageModel;
+var ImageModel = require('../models/Image');
+var ImageAliasModel = require('../models/ImageAlias');
 
 module.exports = {
   getAllImages: getAllImages,
-  getAllImagesWithDetails: getAllImagesWithDetails
+  getAllImagesWithDetails: getAllImagesWithDetails,
+  getAllImageAliases: getAllImageAliases,
+  createImageAlias: createImageAlias,
+  importImage: importImage
 };
+
+function getAllImageAliases() {
+  return lxdClient.getImageAliases()
+  .then(function(res) {
+    var aliases = res.metadata.map(function(resource) {
+      return new ImageAliasModel({
+        resource: resource
+      });
+    });
+    return aliases;
+    console.log('IMaGE ALIASES', aliases);
+  });
+}
 
 var config = process.env;
 
@@ -53,4 +70,33 @@ function getAllImagesWithDetails(req, reply) {
       images: images
     });
   });
+}
+
+function importImage(req, res) {
+  // var alias = req.body.alias;
+  // var remoteImage = req.body.remoteImage;
+
+  // var createImageData = {
+  //   public: true,
+  //   "source": {
+  //       "type": "url",
+  //       "url": "https://www.some-server.com/image"
+  //   }
+  // }
+
+  // lxdClient.createImage()
+
+
+  // var container = new Image({
+  //   name: containerName
+  // });
+  // container.save().then(function() {
+  //   res.json({
+  //     message: 'Success'
+  //   });
+  // });
+}
+
+function createImageAlias() {
+
 }
